--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -6,14 +6,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node app.js",
-        "dev": "nodemon app.js",
-        "build": "CI=false react-scripts build"
+        "dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongodb": "^4.11.0"
     }
