--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "frontend",
-    "homepage": "/",
     "version": "0.1.0",
+    "main": "src/App.js",
     "private": true,
     "dependencies": {
         "dotenv": "^16.0.3",
